# doc-generator

./: .gitignore  README.md  build.spec  pyproject.toml  requirements.txt
.github/workflows/: build.yml
src/doc_generator/: __init__.py  main.py
src/doc_generator/core/: __init__.py  excel_reader.py  expression.py  mapping.py  word_renderer.py
src/doc_generator/gui/: __init__.py  main_window.py  mapping_widget.py
src/doc_generator/utils/: __init__.py  config.py
tests/: __init__.py
